feat: add highlight section

--- a/output.css
+++ b/output.css
@@ -7,16 +7,8 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
-    --color-red-50: oklch(97.1% 0.013 17.38);
-    --color-red-100: oklch(93.6% 0.032 17.717);
-    --color-red-600: oklch(57.7% 0.245 27.325);
-    --color-orange-600: oklch(64.6% 0.222 41.116);
-    --color-amber-200: oklch(92.4% 0.12 95.746);
-    --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-blue-500: oklch(62.3% 0.214 259.815);
-    --color-gray-100: oklch(96.7% 0.003 264.542);
     --color-gray-200: oklch(92.8% 0.006 264.531);
-    --color-gray-600: oklch(44.6% 0.03 256.802);
     --color-black: #000;
     --color-white: #fff;
     --spacing: 0.25rem;
@@ -28,22 +20,11 @@
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
-    --text-6xl: 3.75rem;
-    --text-6xl--line-height: 1;
-    --text-7xl: 4.5rem;
-    --text-7xl--line-height: 1;
-    --text-8xl: 6rem;
-    --text-8xl--line-height: 1;
+    --font-weight-thin: 100;
+    --font-weight-normal: 400;
     --font-weight-medium: 500;
     --font-weight-bold: 700;
-    --font-weight-extrabold: 800;
     --radius-sm: 0.25rem;
-    --drop-shadow-md: 0 3px 3px rgb(0 0 0 / 0.12);
-    --drop-shadow-2xl: 0 25px 25px rgb(0 0 0 / 0.15);
-    --blur-sm: 8px;
-    --blur-md: 12px;
-    --blur-lg: 16px;
-    --blur-2xl: 40px;
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -206,11 +187,50 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
+  .top-20 {
+    top: calc(var(--spacing) * 20);
+  }
+  .top-24 {
+    top: calc(var(--spacing) * 24);
+  }
   .top-40 {
     top: calc(var(--spacing) * 40);
   }
+  .top-48 {
+    top: calc(var(--spacing) * 48);
+  }
+  .top-\[5rem\] {
+    top: 5rem;
+  }
+  .top-\[7\.5rem\] {
+    top: 7.5rem;
+  }
+  .top-\[7rem\] {
+    top: 7rem;
+  }
+  .top-\[10rem\] {
+    top: 10rem;
+  }
+  .top-\[15rem\] {
+    top: 15rem;
+  }
+  .bottom-0 {
+    bottom: calc(var(--spacing) * 0);
+  }
   .bottom-9 {
     bottom: calc(var(--spacing) * 9);
+  }
+  .bottom-\[5rem\] {
+    bottom: 5rem;
+  }
+  .bottom-\[6rem\] {
+    bottom: 6rem;
+  }
+  .bottom-\[7rem\] {
+    bottom: 7rem;
+  }
+  .bottom-\[10rem\] {
+    bottom: 10rem;
   }
   .-z-10 {
     z-index: calc(10 * -1);
@@ -218,11 +238,50 @@
   .mx-5 {
     margin-inline: calc(var(--spacing) * 5);
   }
+  .mx-6 {
+    margin-inline: calc(var(--spacing) * 6);
+  }
+  .mx-10 {
+    margin-inline: calc(var(--spacing) * 10);
+  }
+  .mx-12 {
+    margin-inline: calc(var(--spacing) * 12);
+  }
+  .my-10 {
+    margin-block: calc(var(--spacing) * 10);
+  }
+  .mt-14 {
+    margin-top: calc(var(--spacing) * 14);
+  }
+  .mt-16 {
+    margin-top: calc(var(--spacing) * 16);
+  }
+  .mt-20 {
+    margin-top: calc(var(--spacing) * 20);
+  }
+  .mb-4 {
+    margin-bottom: calc(var(--spacing) * 4);
+  }
+  .mb-5 {
+    margin-bottom: calc(var(--spacing) * 5);
+  }
+  .mb-7 {
+    margin-bottom: calc(var(--spacing) * 7);
+  }
+  .mb-20 {
+    margin-bottom: calc(var(--spacing) * 20);
+  }
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
   }
+  .block {
+    display: block;
+  }
   .flex {
     display: flex;
+  }
+  .grid {
+    display: grid;
   }
   .hidden {
     display: none;
@@ -239,6 +298,12 @@
   .resize {
     resize: both;
   }
+  .grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+  .grid-cols-3 {
+    grid-template-columns: repeat(3, minmax(0, 1fr));
+  }
   .items-center {
     align-items: center;
   }
@@ -250,6 +315,27 @@
   }
   .justify-end {
     justify-content: flex-end;
+  }
+  .gap-3 {
+    gap: calc(var(--spacing) * 3);
+  }
+  .gap-3\.5 {
+    gap: calc(var(--spacing) * 3.5);
+  }
+  .gap-5 {
+    gap: calc(var(--spacing) * 5);
+  }
+  .gap-6 {
+    gap: calc(var(--spacing) * 6);
+  }
+  .gap-7 {
+    gap: calc(var(--spacing) * 7);
+  }
+  .gap-8 {
+    gap: calc(var(--spacing) * 8);
+  }
+  .gap-10 {
+    gap: calc(var(--spacing) * 10);
   }
   .space-y-5 {
     :where(& > :not(:last-child)) {
@@ -270,6 +356,13 @@
       --tw-space-x-reverse: 0;
       margin-inline-start: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
       margin-inline-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
+    }
+  }
+  .space-x-3 {
+    :where(& > :not(:last-child)) {
+      --tw-space-x-reverse: 0;
+      margin-inline-start: calc(calc(var(--spacing) * 3) * var(--tw-space-x-reverse));
+      margin-inline-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
   .space-x-5 {
@@ -302,6 +395,9 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .bg-black {
+    background-color: var(--color-black);
   }
   .bg-blue-500 {
     background-color: var(--color-blue-500);
@@ -347,6 +443,25 @@
   .pr-4 {
     padding-right: calc(var(--spacing) * 4);
   }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .text-3xl {
+    font-size: var(--text-3xl);
+    line-height: var(--tw-leading, var(--text-3xl--line-height));
+  }
+  .text-4xl {
+    font-size: var(--text-4xl);
+    line-height: var(--tw-leading, var(--text-4xl--line-height));
+  }
+  .text-5xl {
+    font-size: var(--text-5xl);
+    line-height: var(--tw-leading, var(--text-5xl--line-height));
+  }
+  .text-\[1\.1rem\] {
+    font-size: 1.1rem;
+  }
   .text-\[1\.2rem\] {
     font-size: 1.2rem;
   }
@@ -364,6 +479,14 @@
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
   }
+  .font-normal {
+    --tw-font-weight: var(--font-weight-normal);
+    font-weight: var(--font-weight-normal);
+  }
+  .font-thin {
+    --tw-font-weight: var(--font-weight-thin);
+    font-weight: var(--font-weight-thin);
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -374,9 +497,21 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .hover\:bg-black {
+    &:hover {
+      @media (hover: hover) {
+        background-color: var(--color-black);
+      }
+    }
+  }
   .md\:absolute {
     @media (width >= 48rem) {
       position: absolute;
+    }
+  }
+  .md\:relative {
+    @media (width >= 48rem) {
+      position: relative;
     }
   }
   .md\:top-0 {
@@ -384,9 +519,149 @@
       top: calc(var(--spacing) * 0);
     }
   }
+  .md\:top-10 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:top-20 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * 20);
+    }
+  }
+  .md\:top-30 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * 30);
+    }
+  }
+  .md\:top-40 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * 40);
+    }
+  }
+  .md\:top-56 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * 56);
+    }
+  }
+  .md\:top-60 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * 60);
+    }
+  }
+  .md\:top-64 {
+    @media (width >= 48rem) {
+      top: calc(var(--spacing) * 64);
+    }
+  }
   .md\:top-96 {
     @media (width >= 48rem) {
       top: calc(var(--spacing) * 96);
+    }
+  }
+  .md\:top-\[50rem\] {
+    @media (width >= 48rem) {
+      top: 50rem;
+    }
+  }
+  .md\:bottom-0 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 0);
+    }
+  }
+  .md\:bottom-10 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 10);
+    }
+  }
+  .md\:bottom-28 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 28);
+    }
+  }
+  .md\:bottom-96 {
+    @media (width >= 48rem) {
+      bottom: calc(var(--spacing) * 96);
+    }
+  }
+  .md\:bottom-\[2rem\] {
+    @media (width >= 48rem) {
+      bottom: 2rem;
+    }
+  }
+  .md\:bottom-\[10rem\] {
+    @media (width >= 48rem) {
+      bottom: 10rem;
+    }
+  }
+  .md\:bottom-\[11rem\] {
+    @media (width >= 48rem) {
+      bottom: 11rem;
+    }
+  }
+  .md\:bottom-\[16rem\] {
+    @media (width >= 48rem) {
+      bottom: 16rem;
+    }
+  }
+  .md\:bottom-\[20rem\] {
+    @media (width >= 48rem) {
+      bottom: 20rem;
+    }
+  }
+  .md\:bottom-\[30rem\] {
+    @media (width >= 48rem) {
+      bottom: 30rem;
+    }
+  }
+  .md\:bottom-\[33rem\] {
+    @media (width >= 48rem) {
+      bottom: 33rem;
+    }
+  }
+  .md\:bottom-\[37rem\] {
+    @media (width >= 48rem) {
+      bottom: 37rem;
+    }
+  }
+  .md\:bottom-\[39rem\] {
+    @media (width >= 48rem) {
+      bottom: 39rem;
+    }
+  }
+  .md\:bottom-\[40rem\] {
+    @media (width >= 48rem) {
+      bottom: 40rem;
+    }
+  }
+  .md\:bottom-\[42rem\] {
+    @media (width >= 48rem) {
+      bottom: 42rem;
+    }
+  }
+  .md\:bottom-\[45rem\] {
+    @media (width >= 48rem) {
+      bottom: 45rem;
+    }
+  }
+  .md\:bottom-\[48rem\] {
+    @media (width >= 48rem) {
+      bottom: 48rem;
+    }
+  }
+  .md\:bottom-\[50rem\] {
+    @media (width >= 48rem) {
+      bottom: 50rem;
+    }
+  }
+  .md\:bottom-\[rem\] {
+    @media (width >= 48rem) {
+      bottom: rem;
+    }
+  }
+  .md\:mx-12 {
+    @media (width >= 48rem) {
+      margin-inline: calc(var(--spacing) * 12);
     }
   }
   .md\:block {
@@ -394,9 +669,24 @@
       display: block;
     }
   }
+  .md\:grid {
+    @media (width >= 48rem) {
+      display: grid;
+    }
+  }
   .md\:hidden {
     @media (width >= 48rem) {
       display: none;
+    }
+  }
+  .md\:w-full {
+    @media (width >= 48rem) {
+      width: 100%;
+    }
+  }
+  .md\:grid-cols-3 {
+    @media (width >= 48rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .lg\:absolute {
@@ -404,9 +694,184 @@
       position: absolute;
     }
   }
+  .lg\:relative {
+    @media (width >= 64rem) {
+      position: relative;
+    }
+  }
+  .lg\:top-7 {
+    @media (width >= 64rem) {
+      top: calc(var(--spacing) * 7);
+    }
+  }
+  .lg\:top-56 {
+    @media (width >= 64rem) {
+      top: calc(var(--spacing) * 56);
+    }
+  }
+  .lg\:top-\[3rem\] {
+    @media (width >= 64rem) {
+      top: 3rem;
+    }
+  }
+  .lg\:top-\[8rem\] {
+    @media (width >= 64rem) {
+      top: 8rem;
+    }
+  }
+  .lg\:top-\[12rem\] {
+    @media (width >= 64rem) {
+      top: 12rem;
+    }
+  }
+  .lg\:top-\[15rem\] {
+    @media (width >= 64rem) {
+      top: 15rem;
+    }
+  }
+  .lg\:top-\[17rem\] {
+    @media (width >= 64rem) {
+      top: 17rem;
+    }
+  }
+  .lg\:top-\[18rem\] {
+    @media (width >= 64rem) {
+      top: 18rem;
+    }
+  }
+  .lg\:top-\[19rem\] {
+    @media (width >= 64rem) {
+      top: 19rem;
+    }
+  }
+  .lg\:top-\[20rem\] {
+    @media (width >= 64rem) {
+      top: 20rem;
+    }
+  }
+  .lg\:top-\[21rem\] {
+    @media (width >= 64rem) {
+      top: 21rem;
+    }
+  }
+  .lg\:top-\[22rem\] {
+    @media (width >= 64rem) {
+      top: 22rem;
+    }
+  }
+  .lg\:top-\[23rem\] {
+    @media (width >= 64rem) {
+      top: 23rem;
+    }
+  }
+  .lg\:top-\[24rem\] {
+    @media (width >= 64rem) {
+      top: 24rem;
+    }
+  }
+  .lg\:top-\[25rem\] {
+    @media (width >= 64rem) {
+      top: 25rem;
+    }
+  }
+  .lg\:top-\[26rem\] {
+    @media (width >= 64rem) {
+      top: 26rem;
+    }
+  }
   .lg\:top-\[28rem\] {
     @media (width >= 64rem) {
       top: 28rem;
+    }
+  }
+  .lg\:top-\[30rem\] {
+    @media (width >= 64rem) {
+      top: 30rem;
+    }
+  }
+  .lg\:bottom-56 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * 56);
+    }
+  }
+  .lg\:bottom-60 {
+    @media (width >= 64rem) {
+      bottom: calc(var(--spacing) * 60);
+    }
+  }
+  .lg\:bottom-\[2rem\] {
+    @media (width >= 64rem) {
+      bottom: 2rem;
+    }
+  }
+  .lg\:bottom-\[10rem\] {
+    @media (width >= 64rem) {
+      bottom: 10rem;
+    }
+  }
+  .lg\:bottom-\[14rem\] {
+    @media (width >= 64rem) {
+      bottom: 14rem;
+    }
+  }
+  .lg\:bottom-\[15\.5rem\] {
+    @media (width >= 64rem) {
+      bottom: 15.5rem;
+    }
+  }
+  .lg\:bottom-\[15rem\] {
+    @media (width >= 64rem) {
+      bottom: 15rem;
+    }
+  }
+  .lg\:bottom-\[16\.5rem\] {
+    @media (width >= 64rem) {
+      bottom: 16.5rem;
+    }
+  }
+  .lg\:bottom-\[16rem\] {
+    @media (width >= 64rem) {
+      bottom: 16rem;
+    }
+  }
+  .lg\:bottom-\[17rem\] {
+    @media (width >= 64rem) {
+      bottom: 17rem;
+    }
+  }
+  .lg\:bottom-\[18rem\] {
+    @media (width >= 64rem) {
+      bottom: 18rem;
+    }
+  }
+  .lg\:bottom-\[20rem\] {
+    @media (width >= 64rem) {
+      bottom: 20rem;
+    }
+  }
+  .lg\:bottom-\[30rem\] {
+    @media (width >= 64rem) {
+      bottom: 30rem;
+    }
+  }
+  .lg\:bottom-\[40rem\] {
+    @media (width >= 64rem) {
+      bottom: 40rem;
+    }
+  }
+  .lg\:bottom-\[42rem\] {
+    @media (width >= 64rem) {
+      bottom: 42rem;
+    }
+  }
+  .lg\:bottom-\[50rem\] {
+    @media (width >= 64rem) {
+      bottom: 50rem;
+    }
+  }
+  .lg\:bottom-\[189rem\] {
+    @media (width >= 64rem) {
+      bottom: 189rem;
     }
   }
   .lg\:mx-10 {
@@ -414,9 +879,19 @@
       margin-inline: calc(var(--spacing) * 10);
     }
   }
+  .lg\:mx-12 {
+    @media (width >= 64rem) {
+      margin-inline: calc(var(--spacing) * 12);
+    }
+  }
   .lg\:mr-10 {
     @media (width >= 64rem) {
       margin-right: calc(var(--spacing) * 10);
+    }
+  }
+  .lg\:mb-7 {
+    @media (width >= 64rem) {
+      margin-bottom: calc(var(--spacing) * 7);
     }
   }
   .lg\:ml-10 {
@@ -439,9 +914,74 @@
       display: flex;
     }
   }
+  .lg\:grid {
+    @media (width >= 64rem) {
+      display: grid;
+    }
+  }
   .lg\:hidden {
     @media (width >= 64rem) {
       display: none;
+    }
+  }
+  .lg\:w-88 {
+    @media (width >= 64rem) {
+      width: calc(var(--spacing) * 88);
+    }
+  }
+  .lg\:w-\[10rem\] {
+    @media (width >= 64rem) {
+      width: 10rem;
+    }
+  }
+  .lg\:w-\[20rem\] {
+    @media (width >= 64rem) {
+      width: 20rem;
+    }
+  }
+  .lg\:w-\[21\.5rem\] {
+    @media (width >= 64rem) {
+      width: 21.5rem;
+    }
+  }
+  .lg\:w-\[21\.8rem\] {
+    @media (width >= 64rem) {
+      width: 21.8rem;
+    }
+  }
+  .lg\:w-\[21\.9rem\] {
+    @media (width >= 64rem) {
+      width: 21.9rem;
+    }
+  }
+  .lg\:w-\[21rem\] {
+    @media (width >= 64rem) {
+      width: 21rem;
+    }
+  }
+  .lg\:w-\[22rem\] {
+    @media (width >= 64rem) {
+      width: 22rem;
+    }
+  }
+  .lg\:w-\[23rem\] {
+    @media (width >= 64rem) {
+      width: 23rem;
+    }
+  }
+  .lg\:w-\[25rem\] {
+    @media (width >= 64rem) {
+      width: 25rem;
+    }
+  }
+  .lg\:w-full {
+    @media (width >= 64rem) {
+      width: 100%;
+    }
+  }
+  .lg\:grid-cols-3 {
+    @media (width >= 64rem) {
+      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .lg\:items-center {
@@ -457,6 +997,20 @@
   .lg\:justify-end {
     @media (width >= 64rem) {
       justify-content: flex-end;
+    }
+  }
+  .lg\:gap-6 {
+    @media (width >= 64rem) {
+      gap: calc(var(--spacing) * 6);
+    }
+  }
+  .lg\:space-y-5 {
+    @media (width >= 64rem) {
+      :where(& > :not(:last-child)) {
+        --tw-space-y-reverse: 0;
+        margin-block-start: calc(calc(var(--spacing) * 5) * var(--tw-space-y-reverse));
+        margin-block-end: calc(calc(var(--spacing) * 5) * calc(1 - var(--tw-space-y-reverse)));
+      }
     }
   }
   .lg\:space-x-6 {
@@ -482,9 +1036,26 @@
       padding-inline: calc(var(--spacing) * 10);
     }
   }
+  .lg\:py-20 {
+    @media (width >= 64rem) {
+      padding-block: calc(var(--spacing) * 20);
+    }
+  }
   .lg\:py-28 {
     @media (width >= 64rem) {
       padding-block: calc(var(--spacing) * 28);
+    }
+  }
+  .lg\:text-2xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-2xl);
+      line-height: var(--tw-leading, var(--text-2xl--line-height));
+    }
+  }
+  .lg\:text-3xl {
+    @media (width >= 64rem) {
+      font-size: var(--text-3xl);
+      line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
   .lg\:text-4xl {
