--- a/output.css
+++ b/output.css
@@ -20,6 +20,8 @@
     --text-4xl--line-height: calc(2.5 / 2.25);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
+    --text-7xl: 4.5rem;
+    --text-7xl--line-height: 1;
     --font-weight-thin: 100;
     --font-weight-normal: 400;
     --font-weight-medium: 500;
@@ -187,95 +189,182 @@
   .top-0 {
     top: calc(var(--spacing) * 0);
   }
-  .top-20 {
-    top: calc(var(--spacing) * 20);
+  .top-5 {
+    top: calc(var(--spacing) * 5);
   }
-  .top-24 {
-    top: calc(var(--spacing) * 24);
+  .top-10 {
+    top: calc(var(--spacing) * 10);
   }
-  .top-40 {
-    top: calc(var(--spacing) * 40);
-  }
-  .top-48 {
-    top: calc(var(--spacing) * 48);
-  }
-  .top-\[5rem\] {
-    top: 5rem;
+  .top-16 {
+    top: calc(var(--spacing) * 16);
   }
   .top-\[7\.5rem\] {
     top: 7.5rem;
   }
-  .top-\[7rem\] {
-    top: 7rem;
+  .right-0 {
+    right: calc(var(--spacing) * 0);
   }
-  .top-\[10rem\] {
-    top: 10rem;
-  }
-  .top-\[15rem\] {
-    top: 15rem;
+  .right-5 {
+    right: calc(var(--spacing) * 5);
   }
   .bottom-0 {
     bottom: calc(var(--spacing) * 0);
   }
+  .bottom-3 {
+    bottom: calc(var(--spacing) * 3);
+  }
+  .bottom-5 {
+    bottom: calc(var(--spacing) * 5);
+  }
   .bottom-9 {
     bottom: calc(var(--spacing) * 9);
   }
-  .bottom-\[5rem\] {
-    bottom: 5rem;
+  .bottom-10 {
+    bottom: calc(var(--spacing) * 10);
   }
-  .bottom-\[6rem\] {
-    bottom: 6rem;
+  .bottom-12 {
+    bottom: calc(var(--spacing) * 12);
+  }
+  .bottom-14 {
+    bottom: calc(var(--spacing) * 14);
+  }
+  .bottom-16 {
+    bottom: calc(var(--spacing) * 16);
+  }
+  .bottom-20 {
+    bottom: calc(var(--spacing) * 20);
+  }
+  .bottom-32 {
+    bottom: calc(var(--spacing) * 32);
+  }
+  .bottom-40 {
+    bottom: calc(var(--spacing) * 40);
+  }
+  .bottom-50 {
+    bottom: calc(var(--spacing) * 50);
+  }
+  .bottom-60 {
+    bottom: calc(var(--spacing) * 60);
+  }
+  .bottom-72 {
+    bottom: calc(var(--spacing) * 72);
+  }
+  .bottom-96 {
+    bottom: calc(var(--spacing) * 96);
   }
   .bottom-\[7rem\] {
     bottom: 7rem;
   }
-  .bottom-\[10rem\] {
-    bottom: 10rem;
+  .bottom-\[20\.5rem\] {
+    bottom: 20.5rem;
+  }
+  .bottom-\[20\.9rem\] {
+    bottom: 20.9rem;
+  }
+  .bottom-\[20rem\] {
+    bottom: 20rem;
+  }
+  .bottom-\[21\.1rem\] {
+    bottom: 21.1rem;
+  }
+  .bottom-\[21\.05rem\] {
+    bottom: 21.05rem;
+  }
+  .bottom-\[21\.5rem\] {
+    bottom: 21.5rem;
+  }
+  .bottom-\[21\.7rem\] {
+    bottom: 21.7rem;
+  }
+  .bottom-\[21\.08rem\] {
+    bottom: 21.08rem;
+  }
+  .bottom-\[21\.rem\] {
+    bottom: 21.rem;
+  }
+  .bottom-\[21rem\] {
+    bottom: 21rem;
+  }
+  .bottom-\[22rem\] {
+    bottom: 22rem;
+  }
+  .bottom-\[30rem\] {
+    bottom: 30rem;
+  }
+  .bottom-\[40rem\] {
+    bottom: 40rem;
+  }
+  .bottom-\[50rem\] {
+    bottom: 50rem;
+  }
+  .left-0 {
+    left: calc(var(--spacing) * 0);
+  }
+  .left-40 {
+    left: calc(var(--spacing) * 40);
+  }
+  .left-\[26rem\] {
+    left: 26rem;
+  }
+  .left-\[30rem\] {
+    left: 30rem;
+  }
+  .-z-0 {
+    z-index: calc(0 * -1);
   }
   .-z-10 {
     z-index: calc(10 * -1);
   }
+  .z-10 {
+    z-index: 10;
+  }
+  .z-40 {
+    z-index: 40;
+  }
   .mx-5 {
     margin-inline: calc(var(--spacing) * 5);
   }
-  .mx-6 {
-    margin-inline: calc(var(--spacing) * 6);
+  .my-20 {
+    margin-block: calc(var(--spacing) * 20);
   }
-  .mx-10 {
-    margin-inline: calc(var(--spacing) * 10);
+  .mt-0 {
+    margin-top: calc(var(--spacing) * 0);
   }
-  .mx-12 {
-    margin-inline: calc(var(--spacing) * 12);
-  }
-  .my-10 {
-    margin-block: calc(var(--spacing) * 10);
+  .mt-10 {
+    margin-top: calc(var(--spacing) * 10);
   }
   .mt-14 {
     margin-top: calc(var(--spacing) * 14);
   }
-  .mt-16 {
-    margin-top: calc(var(--spacing) * 16);
-  }
   .mt-20 {
     margin-top: calc(var(--spacing) * 20);
   }
-  .mb-4 {
-    margin-bottom: calc(var(--spacing) * 4);
+  .mr-10 {
+    margin-right: calc(var(--spacing) * 10);
+  }
+  .mr-14 {
+    margin-right: calc(var(--spacing) * 14);
+  }
+  .mr-17 {
+    margin-right: calc(var(--spacing) * 17);
+  }
+  .mr-18 {
+    margin-right: calc(var(--spacing) * 18);
   }
   .mb-5 {
     margin-bottom: calc(var(--spacing) * 5);
   }
-  .mb-7 {
-    margin-bottom: calc(var(--spacing) * 7);
-  }
   .mb-20 {
     margin-bottom: calc(var(--spacing) * 20);
   }
+  .mb-24 {
+    margin-bottom: calc(var(--spacing) * 24);
+  }
+  .mb-40 {
+    margin-bottom: calc(var(--spacing) * 40);
+  }
   .ml-4 {
     margin-left: calc(var(--spacing) * 4);
-  }
-  .block {
-    display: block;
   }
   .flex {
     display: flex;
@@ -301,9 +390,6 @@
   .grid-cols-1 {
     grid-template-columns: repeat(1, minmax(0, 1fr));
   }
-  .grid-cols-3 {
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-  }
   .items-center {
     align-items: center;
   }
@@ -316,32 +402,35 @@
   .justify-end {
     justify-content: flex-end;
   }
-  .gap-3 {
-    gap: calc(var(--spacing) * 3);
-  }
-  .gap-3\.5 {
-    gap: calc(var(--spacing) * 3.5);
-  }
-  .gap-5 {
-    gap: calc(var(--spacing) * 5);
-  }
   .gap-6 {
     gap: calc(var(--spacing) * 6);
-  }
-  .gap-7 {
-    gap: calc(var(--spacing) * 7);
-  }
-  .gap-8 {
-    gap: calc(var(--spacing) * 8);
-  }
-  .gap-10 {
-    gap: calc(var(--spacing) * 10);
   }
   .space-y-5 {
     :where(& > :not(:last-child)) {
       --tw-space-y-reverse: 0;
       margin-block-start: calc(calc(var(--spacing) * 5) * var(--tw-space-y-reverse));
       margin-block-end: calc(calc(var(--spacing) * 5) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .space-y-6 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 6) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 6) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .space-y-7 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 7) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 7) * calc(1 - var(--tw-space-y-reverse)));
+    }
+  }
+  .space-y-8 {
+    :where(& > :not(:last-child)) {
+      --tw-space-y-reverse: 0;
+      margin-block-start: calc(calc(var(--spacing) * 8) * var(--tw-space-y-reverse));
+      margin-block-end: calc(calc(var(--spacing) * 8) * calc(1 - var(--tw-space-y-reverse)));
     }
   }
   .space-x-1 {
@@ -356,13 +445,6 @@
       --tw-space-x-reverse: 0;
       margin-inline-start: calc(calc(var(--spacing) * 2) * var(--tw-space-x-reverse));
       margin-inline-end: calc(calc(var(--spacing) * 2) * calc(1 - var(--tw-space-x-reverse)));
-    }
-  }
-  .space-x-3 {
-    :where(& > :not(:last-child)) {
-      --tw-space-x-reverse: 0;
-      margin-inline-start: calc(calc(var(--spacing) * 3) * var(--tw-space-x-reverse));
-      margin-inline-end: calc(calc(var(--spacing) * 3) * calc(1 - var(--tw-space-x-reverse)));
     }
   }
   .space-x-5 {
@@ -395,6 +477,9 @@
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
+  }
+  .bg-\[\#121a38\] {
+    background-color: #121a38;
   }
   .bg-black {
     background-color: var(--color-black);
@@ -437,11 +522,41 @@
   .py-3 {
     padding-block: calc(var(--spacing) * 3);
   }
+  .py-20 {
+    padding-block: calc(var(--spacing) * 20);
+  }
   .pt-1 {
     padding-top: calc(var(--spacing) * 1);
   }
+  .pt-10 {
+    padding-top: calc(var(--spacing) * 10);
+  }
+  .pt-20 {
+    padding-top: calc(var(--spacing) * 20);
+  }
   .pr-4 {
     padding-right: calc(var(--spacing) * 4);
+  }
+  .pr-10 {
+    padding-right: calc(var(--spacing) * 10);
+  }
+  .pb-20 {
+    padding-bottom: calc(var(--spacing) * 20);
+  }
+  .pb-28 {
+    padding-bottom: calc(var(--spacing) * 28);
+  }
+  .pb-32 {
+    padding-bottom: calc(var(--spacing) * 32);
+  }
+  .pl-10 {
+    padding-left: calc(var(--spacing) * 10);
+  }
+  .pl-11 {
+    padding-left: calc(var(--spacing) * 11);
+  }
+  .pl-12 {
+    padding-left: calc(var(--spacing) * 12);
   }
   .text-2xl {
     font-size: var(--text-2xl);
@@ -455,9 +570,9 @@
     font-size: var(--text-4xl);
     line-height: var(--tw-leading, var(--text-4xl--line-height));
   }
-  .text-5xl {
-    font-size: var(--text-5xl);
-    line-height: var(--tw-leading, var(--text-5xl--line-height));
+  .text-7xl {
+    font-size: var(--text-7xl);
+    line-height: var(--tw-leading, var(--text-7xl--line-height));
   }
   .text-\[1\.1rem\] {
     font-size: 1.1rem;
@@ -478,10 +593,6 @@
   .font-medium {
     --tw-font-weight: var(--font-weight-medium);
     font-weight: var(--font-weight-medium);
-  }
-  .font-normal {
-    --tw-font-weight: var(--font-weight-normal);
-    font-weight: var(--font-weight-normal);
   }
   .font-thin {
     --tw-font-weight: var(--font-weight-thin);
@@ -504,49 +615,9 @@
       }
     }
   }
-  .md\:absolute {
-    @media (width >= 48rem) {
-      position: absolute;
-    }
-  }
   .md\:relative {
     @media (width >= 48rem) {
       position: relative;
-    }
-  }
-  .md\:top-0 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 0);
-    }
-  }
-  .md\:top-10 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:top-20 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 20);
-    }
-  }
-  .md\:top-30 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 30);
-    }
-  }
-  .md\:top-40 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 40);
-    }
-  }
-  .md\:top-56 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 56);
-    }
-  }
-  .md\:top-60 {
-    @media (width >= 48rem) {
-      top: calc(var(--spacing) * 60);
     }
   }
   .md\:top-64 {
@@ -554,44 +625,14 @@
       top: calc(var(--spacing) * 64);
     }
   }
-  .md\:top-96 {
+  .md\:bottom-40 {
     @media (width >= 48rem) {
-      top: calc(var(--spacing) * 96);
+      bottom: calc(var(--spacing) * 40);
     }
   }
-  .md\:top-\[50rem\] {
+  .md\:bottom-52 {
     @media (width >= 48rem) {
-      top: 50rem;
-    }
-  }
-  .md\:bottom-0 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * 0);
-    }
-  }
-  .md\:bottom-10 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * 10);
-    }
-  }
-  .md\:bottom-28 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * 28);
-    }
-  }
-  .md\:bottom-96 {
-    @media (width >= 48rem) {
-      bottom: calc(var(--spacing) * 96);
-    }
-  }
-  .md\:bottom-\[2rem\] {
-    @media (width >= 48rem) {
-      bottom: 2rem;
-    }
-  }
-  .md\:bottom-\[10rem\] {
-    @media (width >= 48rem) {
-      bottom: 10rem;
+      bottom: calc(var(--spacing) * 52);
     }
   }
   .md\:bottom-\[11rem\] {
@@ -599,69 +640,9 @@
       bottom: 11rem;
     }
   }
-  .md\:bottom-\[16rem\] {
+  .md\:mb-20 {
     @media (width >= 48rem) {
-      bottom: 16rem;
-    }
-  }
-  .md\:bottom-\[20rem\] {
-    @media (width >= 48rem) {
-      bottom: 20rem;
-    }
-  }
-  .md\:bottom-\[30rem\] {
-    @media (width >= 48rem) {
-      bottom: 30rem;
-    }
-  }
-  .md\:bottom-\[33rem\] {
-    @media (width >= 48rem) {
-      bottom: 33rem;
-    }
-  }
-  .md\:bottom-\[37rem\] {
-    @media (width >= 48rem) {
-      bottom: 37rem;
-    }
-  }
-  .md\:bottom-\[39rem\] {
-    @media (width >= 48rem) {
-      bottom: 39rem;
-    }
-  }
-  .md\:bottom-\[40rem\] {
-    @media (width >= 48rem) {
-      bottom: 40rem;
-    }
-  }
-  .md\:bottom-\[42rem\] {
-    @media (width >= 48rem) {
-      bottom: 42rem;
-    }
-  }
-  .md\:bottom-\[45rem\] {
-    @media (width >= 48rem) {
-      bottom: 45rem;
-    }
-  }
-  .md\:bottom-\[48rem\] {
-    @media (width >= 48rem) {
-      bottom: 48rem;
-    }
-  }
-  .md\:bottom-\[50rem\] {
-    @media (width >= 48rem) {
-      bottom: 50rem;
-    }
-  }
-  .md\:bottom-\[rem\] {
-    @media (width >= 48rem) {
-      bottom: rem;
-    }
-  }
-  .md\:mx-12 {
-    @media (width >= 48rem) {
-      margin-inline: calc(var(--spacing) * 12);
+      margin-bottom: calc(var(--spacing) * 20);
     }
   }
   .md\:block {
@@ -679,19 +660,14 @@
       display: none;
     }
   }
-  .md\:w-full {
-    @media (width >= 48rem) {
-      width: 100%;
-    }
-  }
   .md\:grid-cols-3 {
     @media (width >= 48rem) {
       grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
-  .lg\:absolute {
-    @media (width >= 64rem) {
-      position: absolute;
+  .md\:pb-20 {
+    @media (width >= 48rem) {
+      padding-bottom: calc(var(--spacing) * 20);
     }
   }
   .lg\:relative {
@@ -699,179 +675,24 @@
       position: relative;
     }
   }
-  .lg\:top-7 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 7);
-    }
-  }
-  .lg\:top-56 {
-    @media (width >= 64rem) {
-      top: calc(var(--spacing) * 56);
-    }
-  }
-  .lg\:top-\[3rem\] {
-    @media (width >= 64rem) {
-      top: 3rem;
-    }
-  }
-  .lg\:top-\[8rem\] {
-    @media (width >= 64rem) {
-      top: 8rem;
-    }
-  }
-  .lg\:top-\[12rem\] {
-    @media (width >= 64rem) {
-      top: 12rem;
-    }
-  }
-  .lg\:top-\[15rem\] {
-    @media (width >= 64rem) {
-      top: 15rem;
-    }
-  }
-  .lg\:top-\[17rem\] {
-    @media (width >= 64rem) {
-      top: 17rem;
-    }
-  }
-  .lg\:top-\[18rem\] {
-    @media (width >= 64rem) {
-      top: 18rem;
-    }
-  }
-  .lg\:top-\[19rem\] {
-    @media (width >= 64rem) {
-      top: 19rem;
-    }
-  }
   .lg\:top-\[20rem\] {
     @media (width >= 64rem) {
       top: 20rem;
     }
   }
-  .lg\:top-\[21rem\] {
+  .lg\:bottom-40 {
     @media (width >= 64rem) {
-      top: 21rem;
+      bottom: calc(var(--spacing) * 40);
     }
   }
-  .lg\:top-\[22rem\] {
+  .lg\:bottom-52 {
     @media (width >= 64rem) {
-      top: 22rem;
-    }
-  }
-  .lg\:top-\[23rem\] {
-    @media (width >= 64rem) {
-      top: 23rem;
-    }
-  }
-  .lg\:top-\[24rem\] {
-    @media (width >= 64rem) {
-      top: 24rem;
-    }
-  }
-  .lg\:top-\[25rem\] {
-    @media (width >= 64rem) {
-      top: 25rem;
-    }
-  }
-  .lg\:top-\[26rem\] {
-    @media (width >= 64rem) {
-      top: 26rem;
-    }
-  }
-  .lg\:top-\[28rem\] {
-    @media (width >= 64rem) {
-      top: 28rem;
-    }
-  }
-  .lg\:top-\[30rem\] {
-    @media (width >= 64rem) {
-      top: 30rem;
-    }
-  }
-  .lg\:bottom-56 {
-    @media (width >= 64rem) {
-      bottom: calc(var(--spacing) * 56);
-    }
-  }
-  .lg\:bottom-60 {
-    @media (width >= 64rem) {
-      bottom: calc(var(--spacing) * 60);
-    }
-  }
-  .lg\:bottom-\[2rem\] {
-    @media (width >= 64rem) {
-      bottom: 2rem;
-    }
-  }
-  .lg\:bottom-\[10rem\] {
-    @media (width >= 64rem) {
-      bottom: 10rem;
-    }
-  }
-  .lg\:bottom-\[14rem\] {
-    @media (width >= 64rem) {
-      bottom: 14rem;
-    }
-  }
-  .lg\:bottom-\[15\.5rem\] {
-    @media (width >= 64rem) {
-      bottom: 15.5rem;
-    }
-  }
-  .lg\:bottom-\[15rem\] {
-    @media (width >= 64rem) {
-      bottom: 15rem;
+      bottom: calc(var(--spacing) * 52);
     }
   }
   .lg\:bottom-\[16\.5rem\] {
     @media (width >= 64rem) {
       bottom: 16.5rem;
-    }
-  }
-  .lg\:bottom-\[16rem\] {
-    @media (width >= 64rem) {
-      bottom: 16rem;
-    }
-  }
-  .lg\:bottom-\[17rem\] {
-    @media (width >= 64rem) {
-      bottom: 17rem;
-    }
-  }
-  .lg\:bottom-\[18rem\] {
-    @media (width >= 64rem) {
-      bottom: 18rem;
-    }
-  }
-  .lg\:bottom-\[20rem\] {
-    @media (width >= 64rem) {
-      bottom: 20rem;
-    }
-  }
-  .lg\:bottom-\[30rem\] {
-    @media (width >= 64rem) {
-      bottom: 30rem;
-    }
-  }
-  .lg\:bottom-\[40rem\] {
-    @media (width >= 64rem) {
-      bottom: 40rem;
-    }
-  }
-  .lg\:bottom-\[42rem\] {
-    @media (width >= 64rem) {
-      bottom: 42rem;
-    }
-  }
-  .lg\:bottom-\[50rem\] {
-    @media (width >= 64rem) {
-      bottom: 50rem;
-    }
-  }
-  .lg\:bottom-\[189rem\] {
-    @media (width >= 64rem) {
-      bottom: 189rem;
     }
   }
   .lg\:mx-10 {
@@ -882,6 +703,11 @@
   .lg\:mx-12 {
     @media (width >= 64rem) {
       margin-inline: calc(var(--spacing) * 12);
+    }
+  }
+  .lg\:mx-40 {
+    @media (width >= 64rem) {
+      margin-inline: calc(var(--spacing) * 40);
     }
   }
   .lg\:mr-10 {
@@ -914,11 +740,6 @@
       display: flex;
     }
   }
-  .lg\:grid {
-    @media (width >= 64rem) {
-      display: grid;
-    }
-  }
   .lg\:hidden {
     @media (width >= 64rem) {
       display: none;
@@ -927,61 +748,6 @@
   .lg\:w-88 {
     @media (width >= 64rem) {
       width: calc(var(--spacing) * 88);
-    }
-  }
-  .lg\:w-\[10rem\] {
-    @media (width >= 64rem) {
-      width: 10rem;
-    }
-  }
-  .lg\:w-\[20rem\] {
-    @media (width >= 64rem) {
-      width: 20rem;
-    }
-  }
-  .lg\:w-\[21\.5rem\] {
-    @media (width >= 64rem) {
-      width: 21.5rem;
-    }
-  }
-  .lg\:w-\[21\.8rem\] {
-    @media (width >= 64rem) {
-      width: 21.8rem;
-    }
-  }
-  .lg\:w-\[21\.9rem\] {
-    @media (width >= 64rem) {
-      width: 21.9rem;
-    }
-  }
-  .lg\:w-\[21rem\] {
-    @media (width >= 64rem) {
-      width: 21rem;
-    }
-  }
-  .lg\:w-\[22rem\] {
-    @media (width >= 64rem) {
-      width: 22rem;
-    }
-  }
-  .lg\:w-\[23rem\] {
-    @media (width >= 64rem) {
-      width: 23rem;
-    }
-  }
-  .lg\:w-\[25rem\] {
-    @media (width >= 64rem) {
-      width: 25rem;
-    }
-  }
-  .lg\:w-full {
-    @media (width >= 64rem) {
-      width: 100%;
-    }
-  }
-  .lg\:grid-cols-3 {
-    @media (width >= 64rem) {
-      grid-template-columns: repeat(3, minmax(0, 1fr));
     }
   }
   .lg\:items-center {
@@ -997,20 +763,6 @@
   .lg\:justify-end {
     @media (width >= 64rem) {
       justify-content: flex-end;
-    }
-  }
-  .lg\:gap-6 {
-    @media (width >= 64rem) {
-      gap: calc(var(--spacing) * 6);
-    }
-  }
-  .lg\:space-y-5 {
-    @media (width >= 64rem) {
-      :where(& > :not(:last-child)) {
-        --tw-space-y-reverse: 0;
-        margin-block-start: calc(calc(var(--spacing) * 5) * var(--tw-space-y-reverse));
-        margin-block-end: calc(calc(var(--spacing) * 5) * calc(1 - var(--tw-space-y-reverse)));
-      }
     }
   }
   .lg\:space-x-6 {
@@ -1041,21 +793,10 @@
       padding-block: calc(var(--spacing) * 20);
     }
   }
-  .lg\:py-28 {
-    @media (width >= 64rem) {
-      padding-block: calc(var(--spacing) * 28);
-    }
-  }
   .lg\:text-2xl {
     @media (width >= 64rem) {
       font-size: var(--text-2xl);
       line-height: var(--tw-leading, var(--text-2xl--line-height));
-    }
-  }
-  .lg\:text-3xl {
-    @media (width >= 64rem) {
-      font-size: var(--text-3xl);
-      line-height: var(--tw-leading, var(--text-3xl--line-height));
     }
   }
   .lg\:text-4xl {
